a slightly more elegant fix for refinement list overflow

--- a/src/app/components/refinement-list/refinement-list.component.scss
+++ b/src/app/components/refinement-list/refinement-list.component.scss
@@ -1,9 +1,9 @@
-// fix mobile overflow bug
+// 🛠 FIXME
 .ais-RefinementList {
-  width: 100%;
-  @media (max-width: 480px) {
-    width: 90vw;
-    max-width: 368px;
+  // 30px is referring to container padding
+  width: calc(100vw - 30px);
+  @media (min-width: 991px) {
+    width: 100%;
   }
 }
 
